# Quail_Compiler

./: CMakeLists.txt  README.md  run_tests.sh
include/autocorrect/: AutoCorrector.h
include/codegen/: CodeGen.h
include/lexer/: Lexer.h  Token.h
include/parser/: AST.h  Parser.h
include/semantic/: SymbolTable.h
include/utils/: Logger.h
src/: main.cpp
src/autocorrect/: AutoCorrector.cpp
src/codegen/: CodeGen.cpp
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: AST.h  Parser.cpp  Parser.h
src/semantic/: SymbolTable.cpp
src/test/: sample.mc
test/: 01_arithmetic.mc  02_if_else.mc  03_while_loop.mc  04_for_loop.mc  05_nested_loops.mc  06_break_continue.mc  07_logical_ops.mc  09_arrays.mc  10_functions.mc  12_recursion_factorial.mc  13_unary.mc  15_bubble_sort.mc  16_scoping.mc  17_gcd.mc  21_class_basic.mc  22_class_fields.mc  23_two_objects.mc  24_method_calls_method.mc  25_method_logic.mc  26_method_loop.mc  27_access_modifiers.mc  28_class_and_functions.mc  29_two_classes.mc  30_oop_complex.mc  sample.mc
